--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background-color: rgb(255, 255, 255);
+    background-color: white;
     width: 100%;
     font-family: 'Poppins', sans-serif;
 }
@@ -16,7 +16,6 @@ body {
 }
 
 header {
-    background-color: rgb(31, 179, 201);
     width: 100%;
     max-width: 1920px;
     margin: auto;
@@ -26,23 +25,26 @@ header {
 header img {
     width: 100%;
     max-width: 300px;
-    padding-left: 10%;
+    padding-left: 1%;
+    padding-top: 2%;
 
 }
 
 main {
-    background-color: rgb(202, 246, 252);
     width: 100%;
     max-width: 1920px;
     margin: auto;
-    padding-top: 150px;
-    padding-bottom: 100px;
 }
+
 
 main h1 {
     color: black;
     font-size: 3rem;
     text-align: center;
+}
+
+main video {
+    width: 100%;
 }
 
 section {
@@ -63,8 +65,7 @@ section p {
     padding-bottom: 50px;
 }
 
-footer {
-    background-color: rgb(31, 179, 201);    
+footer {   
     width: 100%;
     max-width: 1920px;
     position: absolute;
